Add authentication and authorization mechanisms

--- a/EmployeeMS/Views/Home/Index.cshtml
+++ b/EmployeeMS/Views/Home/Index.cshtml
@@ -9,6 +9,6 @@
         <h1 class="display-4">Welcome to the Employee Management System</h1>
         <p class="lead">Effortlessly manage your employees and departments with our powerful Employee Management System. Streamline your HR processes and boost productivity.</p>
         <p>Get started by <a href="@Url.Action("Index", "Employees")" class="text-white">managing employees</a> or <a href="@Url.Action("Index", "Departments")" class="text-white">exploring departments</a>.</p>
-        <p>Or <a href="/Swagger" class="text-white">Swagger</a> API Doucomention.</p>
+        <p>Also <a href="/Swagger" class="text-white">Swagger API Doucomention.</a></p>
     </div>
 </div>
