--- a/EmployeeMS/Views/Employees/Index.cshtml
+++ b/EmployeeMS/Views/Employees/Index.cshtml
@@ -14,6 +14,7 @@
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
                 <tr>
+                   <th>Photo</th>
                     <th>
                         Name
                     </th>
@@ -42,6 +43,18 @@
                 @foreach (var item in Model.Data)
                 {
                     <tr>
+                        <td>
+                            @if (item.Photo != null && item.Photo.Length > 0)
+                            {
+                                var base64 = Convert.ToBase64String(item.Photo);
+                                var imgSrc = $"data:image/png;base64,{base64}";
+                                <img src="@imgSrc" alt="Employee Photo" class="img-thumbnail" style="max-width: 100px; max-height: 100px;" />
+                            }
+                            else
+                            {
+                                <span>No Photo</span>
+                            }
+                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Name)
                         </td>
