--- a/EmployeeMS/Views/Employees/Index.cshtml
+++ b/EmployeeMS/Views/Employees/Index.cshtml
@@ -42,11 +42,11 @@
                             {
                                 var base64 = Convert.ToBase64String(item.Photo);
                                 var imgSrc = $"data:image/png;base64,{base64}";
-                                <img src="@imgSrc" alt="Employee Photo" class="img-thumbnail" style="max-width: 100px; max-height: 100px;" />
+                                <img src="@imgSrc" alt="Employee Photo" class="img-thumbnail rounded-circle" style="width: 60px; height: 60px;" />
                             }
                             else
                             {
-                                <span>No Photo</span>
+                                <img src="~/images/Rcamera.png" alt="Employee Photo" class="img-thumbnail rounded-circle" style="width: 60px; height: 60px;" />
                             }
                         </td>
                         <td>
